mock: Port to Python 3

https://bugzilla.gnome.org/show_bug.cgi?id=761834